tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__TheOtherWay-AAAAAAAAAAAAAAAAAAAMDw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3087,
  "prerequisites": [
    1696
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When you inevitably get Samarium Ore, you'll end up getting a ton of this dust. There are a couple of options here: One includes the monazite line and has a higher yield, the other is simpler but has a poorer yield.\nWe'll look at the latter here.\n\nEventually you'll probably want to switch entirely to the monazite option, but for now, supplementing it with this can be a good idea.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lThe Other Way",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1696
  ],
  "rewards": [],
  "tasks": []
}
