tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__TheStartofCerium-AAAAAAAAAAAAAAAAAAAL-g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3066,
  "prerequisites": [
    3065
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This line will guide you through obtaining elemental cerium.\n\nFirst, react your cerium dioxide with ammonium chloride for some cerium chloride.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lThe Start of Cerium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3065
  ],
  "rewards": [],
  "tasks": []
}
