tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__TheresMySalt-AAAAAAAAAAAAAAAAAAAJFQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2325,
  "prerequisites": [
    2880,
    2879
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Combine Rhodium Salt Solution with Sodium Nitrate to get Rhodium Nitrate.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lThere's My Salt!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2880,
    2879
  ],
  "rewards": [],
  "tasks": []
}
